PYIC-4189: changed codes according code review comments